# Sensors

./: CMakeLists.txt  README.md
client/: client.cpp
include/: sensor.h  sensorfactory.h  server.h  temp.h
resources/: sensors.xml
src/: main.cpp  process_handler.cpp  sensorfactory.cpp  server.cpp  temp.cpp
